fix paragraph spacing.. it's terrible by default

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -132,11 +132,11 @@ blockquote {
 
 p {
 	margin: 0 0 $indent-var;
+    line-height: 1.75;
 	// sibling indentation
   @if $paragraph-indent == true {
     & + p {
 			text-indent: $indent-var;
-//			margin-top: -($indent-var);
 		}
 	}
 }
